<resources>
    <string name="app_name">Velo Visualiser</string>
    <string name="menu_title">Settings</string>
    <string name="section_audio">Audio</string>
    <string name="source_label">Audio Source</string>
    <string name="source_mic">Microphone</string>
    <string name="source_internal">System Audio</string>
    <string name="source_local">Local File</string>
    <string name="source_tone">Tone</string>
    <string name="tone_freq_label">Frequency: %1$d Hz</string>
    <string name="tone_freq_right_label">Right channel: %1$d Hz</string>
    <string name="tone_level_label">Level: %1$d%%</string>
    <string name="tone_xy_mode">X/Y stereo (Lissajous)</string>
    <string name="tone_disclaimer">A clean sine tone that also drives the visuals and lights. Indicative only, not a measurement instrument: Bluetooth and speaker processing colour the result.</string>
    <string name="btn_current_track">Track: %1$s</string>
    <string name="btn_current_track_unknown">Change Track</string>
    <string name="cd_media_play_pause">Play or pause</string>
    <string name="cd_media_loop">Loop track</string>
    <string name="cd_media_close">Stop playback</string>
    <string name="cd_media_seek">Seek</string>
    <string name="media_focus_denied">Another app is using audio right now</string>
    <string name="playback_error_no_audio">No audio track in this file</string>
    <string name="playback_error_unsupported">This audio format isn\'t supported</string>
    <string name="playback_error_output">Couldn\'t open the audio output</string>
    <string name="playback_error_output_lost">Audio output lost</string>
    <string name="file_picker_unavailable">No file picker on this device</string>
    <string name="playback_error_generic">Couldn\'t play this file</string>
    <string name="link_disabled_local_playback">Disabled during local playback</string>
    <string name="vis_oscilloscope">Hardware Oscilloscope</string>
    <string name="vis_tunnel">Deep Tunnel</string>
    <string name="vis_fluid">Fluid Dynamics</string>
    <string name="vis_laser">Volumetric Laser Array</string>
    <string name="vis_circular">Circular Spectrum</string>
    <string name="vis_bars">Spectrum Bars Retro</string>
    <string name="vis_bloom">Spectral Bloom</string>
    <string name="vis_starscape">Starscape</string>
    <string name="vis_rawscope">Raw Oscilloscope</string>
    <string name="vis_spectrogram">Spectrogram</string>
    <string name="vis_waveform">Waveform</string>
    <string name="vis_waveform_3d">Waveform 3D</string>
    <string name="vis_fireworks">Beat Fireworks</string>
    <string name="vis_phyllotaxis">Phyllotaxis Bloom</string>
    <string name="vis_electric_iris">Electric Iris</string>
    <string name="vis_mandala">Mandala Pulse</string>
    <string name="vis_audio_web">Audio Web</string>
    <string name="vis_topo_ridge">Topographic Ridge</string>
    <string name="vis_led_matrix">Pocket LED</string>
    <string name="vis_led_matrix_3d">3D LED</string>
    <string name="vis_mechanical_meter">Mechanical Meter</string>
    <string name="vis_level_meter">Level Meter</string>
    <string name="vis_spectrum_analyser">Spectrum Analyser</string>
    <string name="vis_beat_pulse">Beat Pulse</string>
    <string name="vis_mandelbox">Fractal Cathedral</string>
    <string name="vis_reaction_diffusion">Reaction Diffusion</string>
    <string name="vis_cymatics">Cymatics</string>
    <string name="vis_strange_attractor">Strange Attractor</string>
    <string name="vis_plasma_storm">Plasma Storm</string>
    <string name="vis_aurora_drift">Aurora Drift</string>
    <string name="vis_odyssey">Odyssey</string>
    <string name="vis_logo_particle">Logo Particles</string>
    <string name="vis_chromatic_dots">Chromatic Dots</string>
    <string name="vis_crystal_swarm">Crystalline Swarm</string>
    <string name="vis_liquid_light">Liquid Light</string>
    <string name="vis_spectral_canyon">Spectral Canyon</string>
    <string name="vis_spectral_canyon_classic">Spectral Canyon Classic</string>
    <string name="vis_waveform_waterfall">Waterfall Scope</string>
    <string name="vis_phase_scope">Phase Scope</string>
    <string name="vis_lissajous_scope">Stereo Scope</string>
    <string name="vis_crt_scope">CRT Scope</string>
    <string name="vis_meridian">Meridian</string>
    <string name="vis_nebula">Nebula</string>
    <string name="vis_slipstream">Slipstream</string>
    <string name="vis_veil">Veil</string>
    <string name="vis_veil_topdown">Veil (Top-Down)</string>
    <string name="cat_instruments">Instruments</string>
    <string name="cat_reactive">Reactive</string>
    <string name="cat_immersive">Immersive</string>
    <string name="section_visuals">Visuals</string>
    <string name="display_label">Display</string>
    <string name="customisation_label">Customisation</string>
    <string name="ambient_mode">Ambient Mode</string>
    <string name="fav_hint_toast">Hold a visual to add it to favourites</string>
    <string name="cd_fav_filter_show">Show favourites only</string>
    <string name="cd_fav_filter_showing">Showing favourites only. Tap for all scenes</string>
    <string name="fav_added_toast">Added to swipe favourites</string>
    <string name="fav_removed_toast">Removed from favourites</string>
    <string name="scene_hint">Tap to select · Hold to favourite</string>
    <string name="close_menu">Close</string>
    <string name="ambient_style_classic">Ambient Style: Classic</string>
    <string name="ambient_style_window">Ambient Style: Window</string>
    <string name="shuffle_on">Shuffle Scenes: On</string>
    <string name="shuffle_off">Shuffle Scenes: Off</string>
    <string name="ambient_mode_on">Ambient Mode: On</string>
    <string name="ambient_mode_off">Ambient Mode: Off</string>
    <string name="ambient_mode_hint">Tap twice to exit · Hold to switch style</string>
    <string name="ambient_mode_hint_again">Tap again to exit</string>
    <string name="display_bpm_unit">BPM</string>
    <string name="burnin_on">Burn-in Protection: On</string>
    <string name="burnin_off">Burn-in Protection: Off</string>
    <string name="glow_label">Bloom Intensity</string>
    <string name="glow_off">Off</string>
    <string name="glow_subtle">Subtle</string>
    <string name="glow_standard">Standard</string>
    <string name="glow_intense">Intense</string>
    <string name="theme_label">Theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_neon">Neon</string>
    <string name="theme_warm">Warm</string>
    <string name="theme_cool">Cool</string>
    <string name="theme_mono">Mono</string>
    <string name="section_about">About</string>
    <string name="btn_privacy_policy">View Privacy Policy</string>
    <string name="btn_about">About &amp; Licenses</string>
    <string name="about_title">About</string>
    <string name="about_copyright">© 2026 Rory Gallagher. All rights reserved.</string>
    <string name="about_github">https://github.com/rorygallagher2024/velo-visualiser/</string>
    <string name="about_licenses_title">Third-Party Licenses</string>
    <string name="about_licenses_text"><b>Android Jetpack (androidx)</b>\n
        Copyright © Google LLC. Licensed under the Apache License, Version 2.0.\n\n
        <b>OkHttp</b>\n
        Copyright © 2019 Square, Inc. Licensed under the Apache License, Version 2.0.\n\n
        <b>Bouncy Castle</b>\n
        Copyright © 2000–2024 The Legion of the Bouncy Castle Inc. Licensed under the MIT License.\n\n
        <b>Oboe</b>\n
        Copyright © Google LLC. Licensed under the Apache License, Version 2.0.\n\n
        <b>Ableton Link</b>\n
        Copyright © 2016 Ableton. Licensed under the GPLv2+ or a proprietary license for commercial use.\n\n
        <b>Satoshi &amp; Clash Display Fonts</b>\n
        Copyright © Indian Type Foundry. Licensed under the Fontshare Free Font License.</string>
    <string name="about_trademarks_title">Trademarks</string>
    <string name="about_trademarks_text"><b>Philips Hue</b> is a trademark of Signify. This app is not affiliated with, sponsored by, or endorsed by Signify.\n\n<b>LIFX</b> is a trademark of Lifi Labs, Inc.\n\n<b>Nanoleaf</b> is a trademark of NanoGrid Limited.\n\n<b>Ableton Link</b> is a trademark of Ableton AG.</string>
    <string name="adv_button">Advanced…</string>
    <string name="hue_section_bridge">CONNECTION</string>
    <string name="hue_section_areas">ENTERTAINMENT AREA</string>
    <string name="hue_section_sync">AUDIO SYNC</string>
    <string name="hue_prerequisites">Requires a Philips Hue Bridge (v2), Color Lights, and an Entertainment Area configured in the official Hue app. Your phone and bridge must be on the same Wi-Fi.</string>
    <string name="hue_connect">Connect</string>
    <string name="hue_sync_off">Light Sync: Off</string>
    <string name="wled_scan">Scan for WLED Devices</string>
    <string name="wled_blurb">WLED runs on DIY ESP32/ESP8266 LED controllers on your Wi-Fi. Make sure your phone is on the same network, then scan to find and sync your devices.</string>
    <string name="hue_status_idle"></string>
    <string name="hue_light_control_label">Light Control</string>
    <string name="hue_brightness_label">Brightness</string>
    <string name="nanoleaf_hint">Nanoleaf panels/shapes support an ultra-fast Wi-Fi streaming protocol. (Note: Nanoleaf Essentials bulbs are Bluetooth/Matter and are not supported).\n\nTo pair, hold the power button on your Nanoleaf controller for 5-7 seconds until the LED starts flashing. Ensure your phone is on the same Wi-Fi network.</string>
</resources>